ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: playground-ingress
  namespace: dev

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground-service
                port:
                  number: 8888
